config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -24,7 +24,7 @@
             },
             {
                 "type": "Link",
-                "label": "GitHub",
+                "label": "X",
                 "url": "https://github.com/netlify-templates",
                 "altText": "Netlify templates"
             }
