--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,7 @@
                 "type": "Link",
                 "label": "X",
                 "url": "https://github.com/netlify-templates",
-                "altText": "Netlify templates"
+                "altText": ""
             }
         ],
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/)",
